--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.2.*",
-        "doctrine/orm": "amenophis/fp-whmcs-connector"
+        "amenophis/fp-whmcs-connector": "dev-master"
     },
     "minimum-stability": "dev"
 }
