--- a/src/Amenophis/Bundle/WHMCSBundle/Resources/config/routing/signup.yml
+++ b/src/Amenophis/Bundle/WHMCSBundle/Resources/config/routing/signup.yml
@@ -1,21 +1,21 @@
 # signup:
-    # resource: "@FPWHMCSBundle/Controller/SignupController.php"
+    # resource: "@AmenophisWHMCSBundle/Controller/SignupController.php"
     # type:     annotation
     
-fp_whmcs_signup:
+amenophis_whmcs_signup:
   pattern: "/signup"
-  defaults: { _controller: FPWHMCSBundle:Signup:index }
+  defaults: { _controller: AmenophisWHMCSBundle:Signup:index }
   requirements:
     _method: GET
       
-fp_whmcs_signup_process:
+amenophis_whmcs_signup_process:
   pattern: "/signup/process"
-  defaults: { _controller: FPWHMCSBundle:Signup:indexProcess }
+  defaults: { _controller: AmenophisWHMCSBundle:Signup:indexProcess }
   requirements:
     _method: POST
 
-fp_whmcs_signup_success:
+amenophis_whmcs_signup_success:
   pattern: "/signup/complete"
-  defaults: { _controller: FPWHMCSBundle:Signup:complete }
+  defaults: { _controller: AmenophisWHMCSBundle:Signup:complete }
   requirements:
     _method: GET
