--- a/src/Amenophis/Bundle/WHMCSBundle/Resources/config/services.yml
+++ b/src/Amenophis/Bundle/WHMCSBundle/Resources/config/services.yml
@@ -1,16 +1,16 @@
 parameters:
-  fp.whmcs.host:        ""
-  fp.whmcs.username:    ""
-  fp.whmcs.password:    ""
-  fp.whmcs.connector:   "FP\WHMCS\Adapter\Json\Connector"
-  fp.whmcs.user.provider.class: FP\Bundle\WHMCSBundle\Security\UserProvider
-    
+  amenophis.whmcs.host:        ""
+  amenophis.whmcs.username:    ""
+  amenophis.whmcs.password:    ""
+  amenophis.whmcs.connector:   "FP\WHMCS\Adapter\Json\Connector"
+  amenophis.whmcs.user.provider.class: FP\Bundle\WHMCSBundle\Security\UserProvider
+
 services:
-  fp.whmcs:
-    class: %fp.whmcs.connector%
-    arguments: [%fp.whmcs.host%, %fp.whmcs.username%, %fp.whmcs.password%]
-  fp.whmcs.user.provider:
-    class: %fp.whmcs.user.provider.class%
-    arguments: [@fp.whmcs]
-  fp.whmcs.encoder:
-    class: FP\Bundle\WHMCSBundle\Security\Encoder\WHMCS
+  amenophis.whmcs:
+    class: %amenophis.whmcs.connector%
+    arguments: [%amenophis.whmcs.host%, %amenophis.whmcs.username%, %amenophis.whmcs.password%]
+  amenophis.whmcs.user.provider:
+    class: %amenophis.whmcs.user.provider.class%
+    arguments: [@amenophis.whmcs]
+  amenophis.whmcs.encoder:
+    class: Amenophis\Bundle\WHMCSBundle\Security\Encoder\WHMCS
